fix: button component counter visibility control

--- a/src/common/components/structure/Button/Button.module.scss
+++ b/src/common/components/structure/Button/Button.module.scss
@@ -212,73 +212,6 @@
     }
   }
 
-  &.counter {
-    &::after {
-      content: attr(data-counter);
-      position: absolute;
-      max-height: 18px;
-      width: 18px;
-      right: -6px;
-      top: -6px;
-      border-radius: 100%;
-      font-style: normal;
-      font-weight: 700;
-      font-size: 1.2rem;
-      color: $color-base-10;
-      text-align: center;
-      letter-spacing: -0.06em;
-      padding: 2px 0;
-    }
-
-    &__bg-color--black {
-      &::after {
-        background-color: $color-base-80;
-      }
-    }
-
-    &__bg-color--gray {
-      &::after {
-        background-color: $color-base-50;
-      }
-    }
-
-    &__bg-color--purple {
-      &::after {
-        background-color: $color-product-purple;
-      }
-    }
-
-    &__bg-color--purple-dark {
-      &::after {
-        background-color: $color-product-purple-dark;
-      }
-    }
-
-    &__bg-color--purple-light {
-      &::after {
-        background-color: $color-product-purple-light;
-      }
-    }
-
-    &__bg-color--yellow {
-      &::after {
-        background-color: $color-product-yellow;
-      }
-    }
-
-    &__bg-color--yellow-dark {
-      &::after {
-        background-color: $color-product-yellow-dark;
-      }
-    }
-
-    &__bg-color--yellow-light {
-      &::after {
-        background-color: $color-product-yellow-light;
-      }
-    }
-  }
-
   &:disabled {
     cursor: not-allowed;
     opacity: 0.8;
